# react-native-paho-mqtt

./: CONTRIBUTING.md  README.md  package.json  react-native-paho-mqtt.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/pahomqtt/: PahoMqttModule.kt  PahoMqttPackage.kt
cpp/: react-native-paho-mqtt.cpp  react-native-paho-mqtt.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/pahomqtt/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/PahoMqttExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/PahoMqttExample.xcodeproj/: project.pbxproj
example/ios/PahoMqttExample.xcodeproj/xcshareddata/xcschemes/: PahoMqttExample.xcscheme
example/ios/PahoMqttExampleTests/: PahoMqttExampleTests.m
example/src/: App.tsx
ios/: PahoMqtt.h  PahoMqtt.mm
src/: NativePahoMqtt.ts  index.tsx
